--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -291,7 +291,10 @@
             background: $light-light-grey;
             font-weight: 600;
         }
+    }
 
+    &__link {
+        color: rgba($navy-blue, .7); 
     }
 }
 
